--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,9 +92,9 @@ table{
 
 .table td, .table th{
     padding: .75em;
-    vertical-align: top;
+    /* vertical-align: top; */
     text-align: center;
-    border-top: 1px solid var(--border);
+    /* border-top: 1px solid var(--border); */
 }
 
 .table td > a.btn{
@@ -166,7 +166,15 @@ table{
     font-size: 1em;
     border-radius: .2em;
 }
-
+#combobox{
+    width: 100%;
+    padding: .6em 1em;
+    margin: .5em 0;
+    border: 1px solid var(--border);
+    font-family: 'Barlow', sans-serif;
+    font-size: 1em;
+    border-radius: .2em;
+}
 #update_command .form-group .radio,
 #add_command .form-group .radio{
     margin: 1em 2em;
