--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -3,12 +3,12 @@
       <div class="form-group">
         <label for="code" class="text-light">Mã</label>
         <input type="hidden" name="id" value="" />
-        <input
-          type="text"
-          name="code"
-          value=""
-          placeholder="Nhập mã chứng khoán"
-        />
+        <select id="combobox" name="code" >
+          <option value="ACB" selected>ACB</option>
+          <option value="FLD">FLD</option>
+          <option value="HGF">HGF</option>
+          <option value="DGH" >DGH</option>
+        </select>
       </div>
       <div class="form-group">
         <label for="amount" class="text-light">Số lượng</label>
@@ -16,7 +16,7 @@
           type="text"
           name="amount"
           value=""
-          placeholder="Nhập khối lượng"
+          placeholder="Nhập số lượng"
         />
       </div>
       <div class="form-group">
