--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -13,7 +13,7 @@
         <nav>
             <div class="container">
                 <div class="text-center">
-                    <a href="/" class="nav-brand text-dark">DVH_XC</a>
+                    <a href="/" class="nav-brand text-dark">DVH_SXC</a>
                 </div>
             </div>
         </nav>
